crates/compiler/tests/parse_errors/import_name.elm
module Main exposing (..)

import 

x = 1
